Updated routes & added pinned announcements
