# api/controllers/UserController.js
@@ -1,12 +1,18 @@
 const db = require('../../db/models/index');
 
-exports.user_smoke_test_get = function(req, res) {
-    db.User.findAll({}).then(user => {
-        res.json(user[0]);
+exports.user_get = function (req, res) {
+    db.User.findOne({
+        where: {id: req.params.user_id},
+        attributes: ['first_name', 'last_name', 'email']
+    }).then(user => {
+        res.send(user);
+    }).catch(function (err) {
+        res.status(400);
+        res.send('Something went wrong... ' + err);
     });
 };
 
-exports.user_create_post = function(req, res) {
+exports.user_create_post = function (req, res) {
     db.User.create({
         first_name: req.body.first_name,
         last_name: req.body.last_name,
@@ -21,15 +27,15 @@ exports.user_create_post = function(req, res) {
         }).then(data => {
 
         }).catch(function (err) {
-
-        })
+            res.send('Something went wrong... ' + err);
+        });
         res.send('Successfully created user.')
-    }).catch(function(err) {
+    }).catch(function (err) {
         res.send('Something went wrong... ' + err);
     });
 };
 
-exports.user_update_post = function(req, res) {
+exports.user_update_post = function (req, res) {
     db.User.findOne({
         where: {
             id: req.body.user_id
@@ -42,7 +48,7 @@ exports.user_update_post = function(req, res) {
             email: req.body.email,
             refresh_token: req.body.refresh_token,
             access_token: req.body.cookie
-        }).catch(function(err) {
+        }).catch(function (err) {
             res.status(400);
             res.send('Something went wrong...' + err);
         });
@@ -53,26 +59,11 @@ exports.user_update_post = function(req, res) {
     });
 };
 
-exports.user_token_get = function(req, res) {
-    // TODO: implement
-};
-
-exports.user_delete_post = function(req, res) {
+exports.user_delete_post = function (req, res) {
     db.User.destroy({
         where: {user_id: req.body.user_id}
     }).then(user => {
         res.send('Successfully deleted user.');
-    }).catch(function (err) {
-        res.status(400);
-        res.send('Something went wrong... ' + err);
-    });
-};
-
-exports.user_get = function(req, res) {
-    db.User.findOne({
-        where: {user_id: req.params.user_id}
-    }).then(user => {
-        res.send(user);
     }).catch(function (err) {
         res.status(400);
         res.send('Something went wrong... ' + err);
